--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compileOnly 'com.vexsoftware:nuvotifier-universal:2.6.0'
     compileOnly 'me.clip:placeholderapi:2.10.9'
     compileOnly 'org.jetbrains:annotations:16.0.2'
+    compileOnly 'me.realized:tokenmanager:3.2.5'
 }
 
 compileJava {
