Replaced Votifier dependency since the bintray repo went sunset

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ repositories {
     maven { url = 'http://nexus.hc.to/content/repositories/pub_releases' }
     maven { url = 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
     maven { url = 'https://repo.dakanilabs.com/repository/public' }
-    maven { url = 'https://dl.bintray.com/ichbinjoe/public/' }
     maven { url = 'http://repo.maven.apache.org/maven2' }
     maven { url = 'https://jitpack.io' }
 }
@@ -32,7 +31,7 @@ dependencies {
 
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly 'com.github.milkbowl:vault:1.7.3'
-    compileOnly 'com.vexsoftware:nuvotifier-universal:2.6.0'
+    compileOnly 'com.vexsoftware:votifier:2.7.2'
     compileOnly 'me.clip:placeholderapi:2.10.9'
     compileOnly 'org.jetbrains:annotations:16.0.2'
     compileOnly 'me.realized:tokenmanager:3.2.5'
