--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 group = 'org.black_ixx'
-version = '3.2.1'
+version = '3.2.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -35,6 +35,8 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.10.9'
     compileOnly 'org.jetbrains:annotations:16.0.2'
     compileOnly 'me.realized:tokenmanager:3.2.5'
+    compileOnly 'su.nightexpress:gamepoints:1.3.0'
+    compileOnly 'su.nexmedia:nexengine:2.1.2'
 }
 
 compileJava {
