--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,11 @@ repositories {
 }
 
 dependencies {
-    api 'dev.rosewood:rosegarden:1.1.0.49-SNAPSHOT'
+    api 'dev.rosewood:rosegarden:1.2.1'
 
     compileOnly 'org.spigotmc:spigot:1.17.1'
     compileOnly 'com.github.milkbowl:vault:1.7.3'
-    compileOnly 'me.lokka30:treasury-api:1.1.1'
+    compileOnly 'me.lokka30:treasury-api:1.2.1'
     compileOnly 'com.vexsoftware:votifier:2.7.2'
     compileOnly 'me.clip:placeholderapi:2.10.9'
     compileOnly 'org.jetbrains:annotations:16.0.2'
