--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compileOnly 'me.realized:tokenmanager:3.2.5'
     compileOnly 'su.nightexpress:gamepoints:1.3.1'
     compileOnly 'su.nexmedia:nexengine:2.2.0'
+    compileOnly 'cn.handyplus.lib.adapter:FoliaLib:1.0.9'
 }
 
 compileJava {
@@ -59,6 +60,7 @@ shadowJar {
     minimize()
 
     relocate('dev.rosewood.rosegarden', 'org.black_ixx.playerpoints.libs.rosegarden')
+    relocate('cn.handyplus.lib.adapter.FoliaLib', 'org.black_ixx.playerpoints.libs.adapter')
 }
 
 publishing {
