--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'java-library'
     id 'maven-publish'
 }
@@ -9,7 +9,11 @@ plugins {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 group = 'org.black_ixx'
-version = '3.2.6'
+version = '3.2.7-SNAPSHOT'
+
+java {
+    disableAutoTargetJvm()
+}
 
 repositories {
     mavenCentral()
@@ -26,9 +30,9 @@ repositories {
 }
 
 dependencies {
-    api 'dev.rosewood:rosegarden:1.2.5'
+    api 'dev.rosewood:rosegarden:1.3.0.36-DEV-SNAPSHOT'
 
-    compileOnly 'org.spigotmc:spigot:1.17.1'
+    compileOnly 'org.spigotmc:spigot-api:1.20.5-R0.1-SNAPSHOT'
     compileOnly 'com.github.milkbowl:vault:1.7.3'
     compileOnly 'me.lokka30:treasury-api:1.2.1'
     compileOnly 'com.vexsoftware:votifier:2.7.2'
@@ -42,7 +46,6 @@ dependencies {
 compileJava {
     options.compilerArgs += ['-parameters']
     options.fork = true
-    options.forkOptions.executable = 'javac'
     options.encoding = 'UTF-8'
 }
 
@@ -88,3 +91,4 @@ publishing {
 }
 
 build.dependsOn shadowJar
+publishShadowPublicationToMavenRepository.dependsOn jar
