--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 }
 
 dependencies {
-    api 'dev.rosewood:rosegarden:1.3.0.36-DEV-SNAPSHOT'
+    api 'dev.rosewood:rosegarden:1.3.3-SNAPSHOT'
 
     compileOnly 'org.spigotmc:spigot-api:1.20.5-R0.1-SNAPSHOT'
     compileOnly 'com.github.milkbowl:vault:1.7.3'
