--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 group = 'org.black_ixx'
-version = '3.2.7'
+version = '3.2.8'
 
 java {
     disableAutoTargetJvm()
@@ -36,7 +36,7 @@ dependencies {
     compileOnly 'com.github.milkbowl:vault:1.7.3'
     compileOnly 'me.lokka30:treasury-api:1.2.1'
     compileOnly 'com.vexsoftware:votifier:2.7.2'
-    compileOnly 'me.clip:placeholderapi:2.11.3'
+    compileOnly 'me.clip:placeholderapi:2.11.6'
     compileOnly 'org.jetbrains:annotations:24.0.1'
     compileOnly 'me.realized:tokenmanager:3.2.5'
     compileOnly 'su.nightexpress:gamepoints:1.3.1'
@@ -90,5 +90,8 @@ publishing {
     }
 }
 
-build.dependsOn shadowJar
-publishShadowPublicationToMavenRepository.dependsOn jar
+build {
+    dependsOn(shadowJar)
+}
+// This task doesn't seem to appear on every environment.
+// publishShadowPublicationToMavenRepository.dependsOn jar
