--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 group = 'org.black_ixx'
-version = '3.2.7'
+version = '3.3.0-SNAPSHOT'
 
 java {
     disableAutoTargetJvm()
@@ -30,9 +30,9 @@ repositories {
 }
 
 dependencies {
-    api 'dev.rosewood:rosegarden:1.4.2'
+    api 'dev.rosewood:rosegarden:1.4.4'
 
-    compileOnly 'org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.21.3-R0.1-SNAPSHOT'
     compileOnly 'com.github.milkbowl:vault:1.7.3'
     compileOnly 'me.lokka30:treasury-api:1.2.1'
     compileOnly 'com.vexsoftware:votifier:2.7.2'
