--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 group = 'org.black_ixx'
-version = '3.3.0-SNAPSHOT'
+version = '3.3.0'
 
 java {
     disableAutoTargetJvm()
