--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'com.gradleup.shadow' version '9.0.0-beta10'
     id 'java-library'
     id 'maven-publish'
 }
@@ -29,7 +29,7 @@ repositories {
 }
 
 dependencies {
-    api 'dev.rosewood:rosegarden:1.4.6'
+    api 'dev.rosewood:rosegarden:1.4.7'
 
     compileOnly 'org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT'
     compileOnly 'com.github.milkbowl:vault:1.7.3'
