--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
     maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
     maven { url = 'https://repo.codemc.org/repository/maven-public' }
     maven { url = 'https://nexus.hc.to/content/repositories/pub_releases' }
+    maven { url = 'https://repo.auxilor.io/repository/maven-public/' }
     maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
     maven { url = 'https://repo.maven.apache.org/maven2' }
     maven { url = 'https://jitpack.io' }
@@ -40,6 +41,8 @@ dependencies {
     compileOnly 'me.realized:tokenmanager:3.2.5'
     compileOnly 'su.nightexpress:gamepoints:1.3.1'
     compileOnly 'su.nexmedia:nexengine:2.2.0'
+    compileOnly 'com.willfp:eco:6.75.2'
+    compileOnly 'com.willfp:EcoBits:1.8.4'
 }
 
 compileJava {
