--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 group = 'org.black_ixx'
-version = '3.3.3'
+version = '3.3.4-SNAPSHOT'
 
 java {
     disableAutoTargetJvm()
@@ -32,7 +32,7 @@ repositories {
 dependencies {
     api 'dev.rosewood:rosegarden:1.5.3'
 
-    compileOnly 'org.spigotmc:spigot-api:1.21.7-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.21.8-R0.1-SNAPSHOT'
     compileOnly 'com.github.milkbowl:vault:1.7.3'
     compileOnly 'me.lokka30:treasury-api:1.2.1'
     compileOnly 'com.vexsoftware:votifier:2.7.2'
